fix(SleepCard): fix alignment

--- a/client/src/components/pages/Sleep/SleepLog/SleepCard/style.css
+++ b/client/src/components/pages/Sleep/SleepLog/SleepCard/style.css
@@ -1,6 +1,7 @@
 .m-sleep-card {
   align-items: center;
   display: grid;
+  gap: var(--space-2);
   grid-template-columns: repeat(2, 1fr);
-  justify-items: center;
+  text-align: center;
 }
